--- a/phase_0/week_1/h8dsft_looping.ipynb
+++ b/phase_0/week_1/h8dsft_looping.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "402, 984, 360, 408, 980, 544, 390, 984, 592, 236, 942, 386, 462, 418, 344, 236, 566, 978, 328, 162, 758, Done\n"
+      "402, 984, 360, 408, 980, 544, 390, 984, 592, 236, 942, 386, 462, 418, 344, 236, 566, 978, 328, 162, 758, 918. Done\n"
      ]
     }
    ],
@@ -39,6 +39,7 @@
     "\n",
     "for i in numbers:\n",
     "    if i == 918:\n",
+    "        print(i, end=\". \")\n",
     "        break\n",
     "    elif i%2==0:\n",
     "        print(i, end=\", \")\n",
